fixed dataGrid height and wrap and update onBlur

--- a/packages/shared-ui/src/components/Shared/DataGrid/DataGrid.module.css
+++ b/packages/shared-ui/src/components/Shared/DataGrid/DataGrid.module.css
@@ -14,8 +14,11 @@
 .agContainer :global(.ag-header),
 .agContainer :global(.ag-header-cell),
 .agContainer :global(.ag-header-row) {
+  height: 40px !important;
+  min-height: 40px !important;
   background: var(--ag-header-bg, #f5f5f5);
 }
+
 
 .agContainer :global(.ag-header-cell-text) {
   font-size: 0.9rem;
@@ -145,10 +148,17 @@
   box-sizing: border-box;
 }
 
-@media (min-width: 1920px) {
+/* @media (min-width: 1920px) {
   .agContainer.ag-theme-alpine {
-    /* --ag-header-height: 44px; */
+    --ag-header-height: 44px;
     --ag-font-size: 1rem;
+  }
+
+  .agContainer :global(.ag-header),
+  .agContainer :global(.ag-header-cell),
+  .agContainer :global(.ag-header-row) {
+    min-height: 15px !important;
+    height: 35px !important;
   }
 
   .agContainer :global(.ag-header-cell-text) {
@@ -159,19 +169,19 @@
     font-size: 0.9rem !important;
   }
 
-}
+} */
 
 @media (max-width: 1599px) {
 
   .agContainer.ag-theme-alpine {
-    --ag-header-height: 15px  !important;;
     --ag-font-size: 11px;
   }
 
   .agContainer :global(.ag-header),
   .agContainer :global(.ag-header-cell),
   .agContainer :global(.ag-header-row) {
-    min-height: 15px !important;
+    min-height: 33px !important;
+    height: 33px !important;
   }
 
   .agContainer :global(.ag-header-cell-text),
@@ -180,17 +190,33 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1280px) {
   .agContainer.ag-theme-alpine {
-    --ag-header-height: 30px;
+    --ag-header-height: 26px;
     --ag-font-size: 10px;
   }
 
   .agContainer :global(.ag-header),
-  .agContainer :global(.ag-header-cell),
-  .agContainer :global(.ag-header-row) {
-    /* height: 30px !important; */
-    /* min-height: 30px !important; */
+  .agContainer :global(.ag-header-cell) {
+    height: 29px !important;
+    min-height: 29px !important;
+  }
+
+  .agContainer :global(.ag-header-cell-text),
+  .agContainer :global(.ag-cell) {
+    font-size: 10px !important;
+  }
+}
+
+@media (max-width: 1024px) {
+  .agContainer.ag-theme-alpine {
+    --ag-font-size: 10px;
+  }
+
+  .agContainer :global(.ag-header),
+  .agContainer :global(.ag-header-cell){
+    height: 30px !important;
+    min-height: 30px !important;
   }
 
   .agContainer :global(.ag-header-cell-text),
@@ -206,10 +232,9 @@
   }
 
   .agContainer :global(.ag-header),
-  .agContainer :global(.ag-header-cell),
-  .agContainer :global(.ag-header-row) {
-    /* height: 26px !important;
-    min-height: 26px !important; */
+  .agContainer :global(.ag-header-cell) {
+    height: 26px !important;
+    min-height: 26px !important;
   }
 
   .agContainer :global(.ag-header-cell-text),
